examples/valid/first.lama
[int] a ;
a = [int] [1,2,3];
a.append(4);
print a;
int b = a.first();
print b;