examples/invalid/append.lama
[int] a ;
a = [int] [1,2,3];
a.append(true);
print a;